--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "music-app",
+  "homepage":"http://localhost/music_app_backend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta1",
+    "bootstrap-icons": "^1.2.2",
+    "howler": "^2.2.1",
+    "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
