--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music-app",
-  "homepage":"http://localhost/music_app_backend/",
+  "homepage": "https://react-php-music-app.000webhostapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.2.2",
     "howler": "^2.2.1",
     "jquery": "^3.5.1",
+    "popper": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
